--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         - linux/amd64
         - linux/arm64
     container_name: payroll-api
+    user: "1000:1000"
     volumes:
       - ./data:/app/data
       - ./rule:/app/rule
@@ -17,6 +18,16 @@ services:
       - ./output:/app/output
       - ./uploads:/app/uploads
       - ./sessions:/app/sessions
+      - ./application:/app/application
+      - ./web_application:/app/web_application
+
+    command: >
+      bash -c "
+        chmod 777 /app/data /app/uploads /app/output &&
+        touch /app/data/app.db &&
+        chmod 666 /app/data/app.db &&
+        python -m uvicorn api:app --host 0.0.0.0 --port 8000
+      "
     environment:
       - CONFIG_PATH=/app/json/config.json
       - ADMIN_PASSWORD=password
